UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Approval_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Annual_Sales_Impact_From__c</fullName>
        <label>Annual Sales Impact From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annual_Sales_Impact_To__c</fullName>
        <label>Annual Sales Impact  To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Record_Type__c</fullName>
        <label>Bid Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Type__c</fullName>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocation Review</fullName>
                </value>
                <value>
                    <fullName>Contracts Only</fullName>
                </value>
                <value>
                    <fullName>Customer Rebate Change</fullName>
                </value>
                <value>
                    <fullName>Customer Requested Pricing Confirmations</fullName>
                </value>
                <value>
                    <fullName>Direct Order Form Pricing Update</fullName>
                </value>
                <value>
                    <fullName>Exceptional Billings</fullName>
                </value>
                <value>
                    <fullName>Good Dated OTB</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>In-Licensing</fullName>
                </value>
                <value>
                    <fullName>IPA Floor Pricing Update</fullName>
                </value>
                <value>
                    <fullName>IPA Member Addition</fullName>
                </value>
                <value>
                    <fullName>Mass Product Removals</fullName>
                </value>
                <value>
                    <fullName>NDC Change</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>NEW Individual Pricing Agreement (IPA)</fullName>
                </value>
                <value>
                    <fullName>New Launch &amp; WAC</fullName>
                </value>
                <value>
                    <fullName>New Product Launch</fullName>
                </value>
                <value>
                    <fullName>New Product WAC Pricing</fullName>
                </value>
                <value>
                    <fullName>One Time Buy - Price Load Req</fullName>
                </value>
                <value>
                    <fullName>One Time Buy - Price Override Sale</fullName>
                </value>
                <value>
                    <fullName>PHS Price Change</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Product Addition</fullName>
                </value>
                <value>
                    <fullName>Product Discontinuation Process</fullName>
                </value>
                <value>
                    <fullName>RCA/IPA Member Addition</fullName>
                </value>
                <value>
                    <fullName>RCA/IPA Member GPO or Wholesaler Change</fullName>
                </value>
                <value>
                    <fullName>RCA Member Addition</fullName>
                </value>
                <value>
                    <fullName>Re-Bid (Pricing Only)</fullName>
                </value>
                <value>
                    <fullName>Request for Single Contract Product Removal</fullName>
                </value>
                <value>
                    <fullName>RFP Bids</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_GM_Impact_From__c</fullName>
        <label>GM Impact From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GM_Impact_To__c</fullName>
        <label>GM Impact To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GM_Percent_From__c</fullName>
        <label>GM % from</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GM_Percent_To__c</fullName>
        <label>GM % To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Criteria_Matrix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Criteria Matrix?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_New_Low__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Low?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Annual_Sales_From__c</fullName>
        <label>Net Annual Sales From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Annual_Sales_To__c</fullName>
        <label>Net Annual Sales To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Process_Type__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non Financial / Workflow Only</fullName>
                </value>
                <value>
                    <fullName>Financial Bid / Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Quadrant__c</fullName>
        <label>Quadrant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Revenue_From__c</fullName>
        <label>Revenue From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Revenue_To__c</fullName>
        <label>Revenue To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SSA_Impact_To__c</fullName>
        <label>SSA Impact To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SSA_Impact_from_less_than__c</fullName>
        <label>SSA Impact from / less than</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_Impact_To__c</fullName>
        <label>Throughput Impact To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_Impact_from__c</fullName>
        <label>Throughput Impact from</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_Percentage_From__c</fullName>
        <label>Throughput % from</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_Percentage_To__c</fullName>
        <label>Throughput % To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Quadrant__c</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Is_Criteria_Matrix__c</columns>
        <columns>Phoenix_Process_Type__c</columns>
        <columns>Phoenix_Is_New_Low__c</columns>
        <columns>Phoenix_Throughput_Percentage_From__c</columns>
        <columns>Phoenix_Throughput_Percentage_To__c</columns>
        <columns>Phoenix_Throughput_Impact_from__c</columns>
        <columns>Phoenix_Throughput_Impact_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Criteria_based_approvals</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Is_New_Low__c</columns>
        <columns>Phoenix_Quadrant__c</columns>
        <columns>Phoenix_Throughput_Percentage_From__c</columns>
        <columns>Phoenix_Throughput_Percentage_To__c</columns>
        <columns>Phoenix_GM_Percent_From__c</columns>
        <columns>Phoenix_GM_Percent_To__c</columns>
        <columns>Phoenix_Throughput_Impact_from__c</columns>
        <columns>Phoenix_Throughput_Impact_To__c</columns>
        <columns>Phoenix_GM_Impact_From__c</columns>
        <columns>Phoenix_GM_Impact_To__c</columns>
        <columns>Phoenix_Revenue_From__c</columns>
        <columns>Phoenix_Revenue_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Criteria_Matrix__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Phoenix_Quadrant__c</field>
            <operation>equals</operation>
            <value>Purple</value>
        </filters>
        <label>Criteria based approvals</label>
    </listViews>
    <listViews>
        <fullName>Non_Criteria_based_approvals</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid_Type__c</columns>
        <columns>Phoenix_Is_Criteria_Matrix__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Criteria_Matrix__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non-Criteria based approvals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Process #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>